checked null parameters, we need some data cleaning here mannaja

--- a/main.ipynb
+++ b/main.ipynb
@@ -461,6 +461,40 @@
    "source": [
     "I need to check on specs for each data if it is required to fill the Na values with some context specific value or just dealing with them in a different way"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this is gonna be fun ...\n",
+    "\n",
+    "#LotFrontage     numeric, is Na [can be 0]\n",
+    "#Alley           categorical, means \"No access\"\n",
+    "#MasVnrType      categorical, means \"None\"\n",
+    "#MasVnrArea      numeric, is Na [can be 0]\n",
+    "#BsmtQual        categorical, means \"No basement\"\n",
+    "#BsmtCond        categorical, means \"No basement\"\n",
+    "#BsmtExposure    categorical, means \"No basement\"\n",
+    "#BsmtFinType1    categorical, means \"No basement\"\n",
+    "#BsmtFinType2    numeric, is Na [can be 0]\n",
+    "#Electrical      categorical, missing value!\n",
+    "#FireplaceQu     categorical, means \"No fireplace\"\n",
+    "#GarageType      categorical, means \"No garage\"\n",
+    "#GarageYrBlt     numerical, might be missing (need to check if we have garage with no year data)\n",
+    "#GarageFinish    categorical, means \"No garage\"\n",
+    "#GarageQual      categorical, means \"No garage\"\n",
+    "#GarageCond      categorical, means \"No garage\"\n",
+    "#PoolQC          categorical, means \"No pool\"\n",
+    "#Fence           categorical, means \"No fence\"\n",
+    "#MiscFeature     categorical, means \"No other features\"\n",
+    "\n",
+    "#NOTEEEEEEEEEEEEEE\n",
+    "# those values that are related among themselves (basement, garage, pool) must be checked for consistency\n",
+    "#   example: if i have a garage and i have Null on garageYrBlt -> inconsistent record\n",
+    "#            if i dont have a garage and i have Null on garageYrBlt -> good record (need to switch category)"
+   ]
   }
  ],
  "metadata": {
