--- a/DanieleNotebook.ipynb
+++ b/DanieleNotebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -397,8 +397,9 @@
        "[1460 rows x 81 columns]"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -425,8 +426,9 @@
        "(1460, 81)"
       ]
      },
+     "execution_count": 17,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -442,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -451,8 +453,9 @@
        "118260"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -468,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -825,8 +828,9 @@
        "[10 rows x 81 columns]"
       ]
      },
+     "execution_count": 20,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -842,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1096,8 +1100,9 @@
        "dtype: bool"
       ]
      },
+     "execution_count": 23,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1115,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,18 +1154,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (1899686557.py, line 10)",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\danie\\AppData\\Local\\Temp\\ipykernel_20204\\3017502662.py:4: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "  corr = df.corr()\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[22], line 10\u001b[1;36m\u001b[0m\n",
-      "\u001b[1;33m    )\u001b[0m\n",
-      "\u001b[1;37m    ^\u001b[0m\n",
-      "\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m corr \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mcorr()\n\u001b[0;32m      5\u001b[0m \u001b[39m#make it large width\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m plt\u001b[39m.\u001b[39mfigure(figsize\u001b[39m=\u001b[39m(\u001b[39m20\u001b[39m,\u001b[39m20\u001b[39m))\n\u001b[0;32m      7\u001b[0m sns\u001b[39m.\u001b[39mheatmap(corr, annot\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, fmt\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.2f\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     10\u001b[0m \u001b[39m#check for correlation with SalePrice\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
      ]
     }
    ],
@@ -3040,7 +3053,7 @@
     "#change the degree to 45 to make it more readable\n",
     "#divide the plots in 3 rows and 3 columns\n",
     "for attribute in categoricalDataframe.columns:\n",
-    "    plt.figure(figsize=(15,8))\n",
+    "    plt.figure(figsize=(8,8))\n",
     "    sb.countplot(data = df, x = attribute)\n",
     "    plt.xticks(rotation=45)\n",
     "    plt.show()\n",
@@ -3053,19 +3066,44 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'categoricalDataframe' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#check how much an attribute is unbalanced\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[39mfor\u001b[39;00m attribute \u001b[39min\u001b[39;00m categoricalDataframe\u001b[39m.\u001b[39mcolumns:\n\u001b[0;32m      4\u001b[0m     \u001b[39mprint\u001b[39m(df[attribute]\u001b[39m.\u001b[39mvalue_counts())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'categoricalDataframe' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# heatmap for numerical\n",
-    "corr = df.corr()\n",
-    "sns.heatmap(corr,\n",
-    "            xticklabels=corr.columns.values,\n",
-    "            yticklabels=corr.columns.values)\n"
+    "#check how much an attribute is unbalanced\n",
+    "\n",
+    "for attribute in categoricalDataframe.columns:\n",
+    "    print(df[attribute].value_counts())\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
