--- a/latex/SpaceCapybarasReport.tex
+++ b/latex/SpaceCapybarasReport.tex
@@ -14,9 +14,11 @@
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{listings}
+\usepackage{graphicx}
 
-
-
+\usepackage{subfigure}
+\usepackage{subcaption}
+\usepackage{caption}
 \usepackage{longtable}
 
 
