--- a/maikuModels.ipynb
+++ b/maikuModels.ipynb
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "#boring imports, skip that\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -38,11 +39,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datas = pd.read_parquet(\"train_clean.parquet\")"
+    "data = pd.read_parquet(\"train_clean.parquet\")\n",
+    "models = dict()\n",
+    "\n",
+    "seed = 489"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing models, creating models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier, GradientBoostingClassifier, RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "models['random_forest'] =  { 'model' : RandomForestClassifier(random_state=seed)} \n",
+    "models['gradient_boosting'] = { 'model' : GradientBoostingClassifier(random_state=seed) } \n",
+    "models['ada_boost'] = { 'model' : AdaBoostClassifier(random_state=seed) }\n",
+    "models['svc'] = { 'model' : SVC(random_state=seed) }\n",
+    "models ['logistic_regression'] = { 'model' : LogisticRegression(random_state=seed)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array(data.drop(['SalePrice'], axis=1).values)\n",
+    "y = np.array(data['SalePrice'].values)\n",
+    "\n",
+    "test_size = .3\n",
+    "val_size = .2\n",
+    "\n",
+    "#Split train e test\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=test_size, random_state=seed)\n",
+    "#Split train e validation\n",
+    "x_train, x_val, y_train, y_val = train_test_split(x_train, y_train, test_size=val_size, random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "random_forest\n",
+      "gradient_boosting\n",
+      "ada_boost\n",
+      "svc\n",
+      "logistic_regression\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in models:\n",
+    "    print(m)\n",
+    "    #m['model'].fit(x_train, y_train)"
    ]
   }
  ],
