qualche test su svc, 45 minuti di run per il modello

--- a/maikuModels.ipynb
+++ b/maikuModels.ipynb
@@ -66,12 +66,12 @@
     "from sklearn.ensemble import AdaBoostClassifier, GradientBoostingClassifier, RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,25 +103,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\miche\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in models:\n",
+    "    models[m]['model'].fit(x_train,y_train) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predicting values ...\n",
+    "\n",
+    "for m in models:\n",
+    "    models[m]['predictions'] = models[m]['model'].predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "random_forest\n",
-      "gradient_boosting\n",
-      "ada_boost\n",
-      "svc\n",
-      "logistic_regression\n"
+      "model random_forest : 0.863013698630137\n",
+      "model gradient_boosting : 0.8470319634703196\n",
+      "model ada_boost : 0.726027397260274\n",
+      "model svc : 0.7648401826484018\n",
+      "model logistic_regression : 0.773972602739726\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.metrics import accuracy_score\n",
     "for m in models:\n",
-    "    print(m)\n",
-    "    #m['model'].fit(x_train, y_train)"
+    "    print(f\"model {m} : {accuracy_score(models[m]['predictions'], y_test)}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's try to tune a bit some of those models, just to see if we can improve them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''svc\n",
+    " linear ~0.83 \n",
+    " poly/rbf gamma = 1 ~0.799\n",
+    " poly g = 2 default degree ~0.8\n",
+    " poly g = 2 degree=2\n",
+    " usare c nessun miglioramento, ma aggiunge rischio overfitting!\n",
+    " kernel=\"poly\",gamma=2, degree=2 interrotto a 47 minuti di run (non credo sia un buon modello :D )\n",
+    "'''\n",
+    "models['svc'] = { 'model' : SVC(random_state=seed, kernel=\"poly\",gamma=2, class_weight={ 'HIGH': 2} ) }\n",
+    "models['svc']['model'].fit(x_train,y_train) \n",
+    "models['svc']['predictions'] = models['svc']['model'].predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model svc : 0.8036529680365296\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"model svc : {accuracy_score(models['svc']['predictions'], y_test)}\")"
    ]
   }
  ],
