data prep, understanding, started modeling

--- a/latex/SpaceCapybarasReport.tex
+++ b/latex/SpaceCapybarasReport.tex
@@ -55,7 +55,7 @@
     \and
     Merem Hassem Indiris\\
     \and
-    Michele Vitale\\
+    Michele Vitale: 247410\\
     \and
     Lorenzo Piro\\}
 \date{A.Y. 2022/2023}
@@ -80,4 +80,6 @@
 \input{chapters/introduction.tex}
 \input{chapters/business_understanding.tex}
 \input{chapters/data_understanding.tex}
+\input{chapters/data_preparation.tex}
+\input{chapters/modeling.tex}
 \end{document}
