--- a/maikuModels.ipynb
+++ b/maikuModels.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\miche\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "/home/maiku/.local/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
      "output_type": "stream",
      "text": [
       "model random_forest : 0.863013698630137\n",
-      "model gradient_boosting : 0.8470319634703196\n",
+      "model gradient_boosting : 0.8493150684931506\n",
       "model ada_boost : 0.726027397260274\n",
       "model svc : 0.7648401826484018\n",
       "model logistic_regression : 0.773972602739726\n"
@@ -171,17 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''svc\n",
-    " linear ~0.83 \n",
     " poly/rbf gamma = 1 ~0.799\n",
     " poly g = 2 default degree ~0.8\n",
     " poly g = 2 degree=2\n",
     " usare c nessun miglioramento, ma aggiunge rischio overfitting!\n",
     " kernel=\"poly\",gamma=2, degree=2 interrotto a 47 minuti di run (non credo sia un buon modello :D )\n",
+    "24 sec 0.803l models['svc'] = { 'model' : SVC(random_state=seed, kernel=\"poly\",gamma=2, class_weight={ 'HIGH': 2} ) }\n",
+    "2 min 0.8333 run models['svc'] = { 'model' : SVC(random_state=seed, kernel=\"linear\", class_weight={ 'HIGH': 2} ) }\n",
     "'''\n",
     "models['svc'] = { 'model' : SVC(random_state=seed, kernel=\"poly\",gamma=2, class_weight={ 'HIGH': 2} ) }\n",
     "models['svc']['model'].fit(x_train,y_train) \n",
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +209,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -222,9 +223,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d2152fd7f0bbc62aa1baff8c990435d1e2c7175d001561303988032604c11a48"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
