Final Final final (final)

--- a/latex/SpaceCapybarasReport.tex
+++ b/latex/SpaceCapybarasReport.tex
@@ -53,11 +53,11 @@
     \and
     Alessandro Fazio : 242422\\
     \and
-    Merem Hassem Indiris\\
+    Merem Hassem Indiris: 241842\\
     \and
     Michele Vitale: 247410\\
     \and
-    Lorenzo Piro\\}
+    Lorenzo Piro: 242510\\}
 \date{A.Y. 2022/2023}
 \maketitle
 
